# 2021

./: .gitignore  debug_note.txt  ffmpeg编译.txt  planA.txt
Algorithm_D/: build.gradle  settings.gradle
Algorithm_D/app/: build.gradle
Algorithm_D/app/src/main/: AndroidManifest.xml
Algorithm_D/gradle/wrapper/: gradle-wrapper.properties
OpenSourceCode/app/: build.gradle
OpenSourceCode/app/src/main/: AndroidManifest.xml
OpenglNativeDemo/: settings.gradle
OpenglNativeDemo/app/src/main/: AndroidManifest.xml
RxJavaDemo/: build.gradle  settings.gradle
RxJavaDemo/app/: build.gradle
TestAgorithDemo/app/: build.gradle
TinkerDemo/: build.gradle  settings.gradle
TinkerDemo/app/: build.gradle
audio_video/AudioVideoP/: .gitignore  build.gradle  settings.gradle
audio_video/AudioVideoP/app/: build.gradle
audio_video/AudioVideoP/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
audio_video/AudioVideoP/app/src/main/cpp/ffmpeg_decoder/: AudioDecoder.cpp  AudioDecoder.h  DecoderController.cpp  DecoderController.h  FFmpegDecoder.cpp  FFmpegDeocder.cpp
audio_video/AudioVideoP/app/src/main/cpp/mp3_encoder/: AudioEncoder.cpp  Mp3Encoder.cpp  Mp3Encoder.h
audio_video/AudioVideoP/app/src/main/cpp/test/: native-lib.cpp
audio_video/AudioVideoP/app/src/main/cpp/test/demo/: JniGrammar.cpp  MyGrammar.cpp  MyGrammar.h
audio_video/AudioVideoP/app/src/main/cpp/test/simdjson/: testSimdJson.cpp
audio_video/AudioVideoP/app/src/main/cpp/utils/: CommonTools.h  LogUtils.h
audio_video/AudioVideoP/ctest/: build.gradle
audio_video/AudioVideoP/ctest/src/main/cpp/: CMakeLists.txt
audio_video/AudioVideoP/ctest/src/main/cpp/test/: LogUtils.h  Test.cpp
audio_video/AudioVideoP/gradle/wrapper/: gradle-wrapper.properties
c_practise/: _1_c_jichu1  _1_c_jichu1.c  _2_support.c  c1_test  c1_test.cpp  c_jichu_function_point  c_jichu_function_point.c  c_jichu_point  c_jichu_point.c  c_jichu_string  c_jichu_string.c  c_jichu_union  c_jichu_union.c  c_jichu_weiyu  cpp_jichu_class  cpp_jichu_class.cpp  cpp_jichu_class_abstract  cpp_jichu_class_abstract.cpp  cpp_jichu_class_construc  cpp_jichu_class_construc.cpp  cpp_jichu_class_inherit.cpp  cpp_jichu_class_operator.cpp  cpp_jichu_class_poly  cpp_jichu_class_poly.cpp  cpp_jichu_date.cpp  cpp_jichu_exception.cpp  cpp_jichu_file  cpp_jichu_file.cpp  cpp_jichu_new_delete_array  cpp_jichu_new_delete_array.cpp  cpp_jichu_pthread  cpp_jichu_struct  cpp_jichu_struct.cpp  cpp_stack_backtrace.c  cpp_valueofData  cpp_valueofData.cpp  out_file.txt
c_practise/CLionProjects/mylib/: .gitignore  CMakeLists.txt  library.cpp
c_practise/CLionProjects/mylib/senior_play/: play_video.cpp  play_video.h
c_practise/CLionProjects/test/: .gitignore  CMakeLists.txt  common.h  global.cpp  hello.c  main.cpp  node.txt  simplest_mediadata_raw.cpp  simplest_rgb_to_bmp.c  simplest_rgb_to_bmp.h  simplest_rgb_to_yuv.cpp  simplest_rgb_to_yuv.h
c_practise/CLionProjects/test/aac/: simplest_aac_parser.cpp  simplest_aac_parser.h
c_practise/CLionProjects/test/flv/: simplest_flv_parser.cpp  simplest_flv_parser.h
c_practise/CLionProjects/test/h264/: simplest_h264_parser.cpp  simplest_h264_parser.h
c_practise/CLionProjects/test/include/: library.h
c_practise/CLionProjects/test/jichu/: jichu_c_cpp.cpp  jichu_c_cpp.h
c_practise/CLionProjects/test/pcm/: simplest_pcm_split.cpp  simplest_pcm_split.h
c_practise/CLionProjects/test/udp_rtp/: simplest_udp_rtp_parser.cpp  simplest_udp_rtp_parser.h
c_practise/cpp_lrn/: settings.gradle
c_practise/cpp_lrn/app/: build.gradle
c_practise/cpp_lrn/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
c_practise/cpp_lrn/app/src/main/cpp/gles/: egl_engine.cpp  egl_engine.h  gles_core.cpp  gles_core.h  play_callback.cpp  play_callback.h  video_play.cpp  video_play.h
c_practise/cpp_lrn/app/src/main/cpp/opensl/: audio_engine.h  audio_play.cpp  audio_play.h  opensl_audio_play.cpp  opensl_audio_play.h
c_practise/cpp_lrn/app/src/main/cpp/test/: base_c.cpp  base_c.h
c_practise/cpp_lrn/app/src/main/cpp/triangle/: draw_triangle.cpp  draw_triangle.h
c_practise/cpp_lrn/app/src/main/cpp/utils/: my_log.h
c_practise/vs_code/: .gitignore  c_jichu_function_point  c_jichu_function_point.c  c_jichu_point  c_jichu_point.c  c_jichu_string.c  c_jichu_weiyu.c  cpp_jichu_class_construc.cpp  cpp_jichu_class_inherit  cpp_jichu_class_operator  cpp_jichu_date  cpp_jichu_exception  cpp_jichu_file  cpp_jichu_new_delete  cpp_jichu_new_delete.cpp  cpp_jichu_pthread.cpp  cpp_jichu_struct  cpp_jichu_test_do_while  cpp_jichu_test_do_while.cpp  cpp_stack_backtrace  test.txt
demo/GradleBuildDemo/: build.gradle  jichu.gradle  settings.gradle
demo/GradleBuildDemo/antLoadfileResources/: 11.txt  22.txt
demo/GradleBuildDemo/app/: build.gradle
demo/MJNINdk/: build.gradle  settings.gradle
demo/MJNINdk/app/: build.gradle
demo/OpenSourceCode/: build.gradle  settings.gradle
demo/OpenSourceCode/app/: build.gradle
demo/OpenglNativeDemo/app/: build.gradle
demo/my_java_lib/: build.gradle  command.gradle  task.gradle
demo/my_java_lib/dest/: 11.txt
demo/my_java_lib/localRepos/: ivy-unspecified.xml  ivy-unspecified.xml.sha1  ivy-unspecified.xml.sha256  ivy-unspecified.xml.sha512  my_java_lib-unspecified.jar.sha1  my_java_lib-unspecified.jar.sha256  my_java_lib-unspecified.jar.sha512
exapmle/src/01-triangles/: 01-triangles.cpp
exapmle_opengl_book/: .gitignore
exapmle_opengl_book/lib/glfw/: CMakeLists.txt
flutter_practise/flutter_lrn/: README.md  pubspec.yaml
flutter_practise/flutter_lrn/lib/: log.dart  main.dart
flutter_practise/flutter_lrn/test/: widget_test.dart
groovy_practise/: hello.groovy
kotlin_practise/LrnPro/: build.gradle  settings.gradle
kotlin_practise/LrnPro/app/: build.gradle
kotlin_practise/MyWanAndroid/: build.gradle  config.gradle  settings.gradle
kotlin_practise/MyWanAndroid/app/: build.gradle
kotlin_practise/MyWanAndroid/lib/: build.gradle
kotlin_practise/MyWanAndroid/module_base/: build.gradle
kotlin_practise/MyWanAndroid/module_user/: build.gradle
kotlin_practise/MyWanAndroid/module_wan/: build.gradle
(+409 files in other folders)
